--- a/SerpientesEscaleras/src/serpientesescaleras/Start.form
+++ b/SerpientesEscaleras/src/serpientesescaleras/Start.form
@@ -268,6 +268,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hola"/>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="80" y="456" width="50" height="30"/>
